# axon-ai

./: .gitignore  AGENTS.md  LICENSE  ORCHESTRATION_ARCHITECTURE.md  ORCHESTRATION_QUICK_REFERENCE.md  ORCHESTRATION_UI_ARCHITECTURE.md  ORCHESTRATION_VISUAL_FLOWS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish-release.yml  release.yml
.opencode/agent/: duplicate-pr.md  triage.md
.opencode/command/: commit.md  tag.md
.opencode/plugin/: axon-bridge.ts
docs/: opencode-desktop-comparison.md
plugins/opencode/: .gitignore  .prettierrc  axon-bridge.ts  eslint.config.js  package.json
plugins/opencode/src/: index.ts
scripts/: dev-link-plugin.ps1  dev-link-plugin.sh  watch-plugin.ts
src/: index.css  main.tsx  routeTree.gen.ts  router.tsx
src-tauri/: AGENTS.md  Cargo.toml  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  diff.rs  filesystem.rs  layout.rs  mod.rs  models_registry.rs  opencode.rs  orchestration.rs  provider.rs  settings.rs  terminal.rs  update.rs  window.rs  workflow.rs
src-tauri/src/models_registry/: manager.rs  mod.rs  types.rs
src-tauri/src/opencode/: downloader.rs  mod.rs  platform.rs  service.rs  types.rs
src-tauri/src/plugin_api/: handlers.rs  mod.rs  types.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: mod.rs  paths.rs  plugin_installer.rs
src/components/: AppLoader.tsx
src/components/activitybar/: ActivityBar.tsx  index.ts
src/components/chat/: AgentSelector.tsx  ChatContainer.tsx  ChatInput.tsx  ChatInputCard.tsx  ChatMessage.tsx  FloatingPermissionPrompt.tsx  LspStatusBadge.tsx  ModelSelector.tsx  QuickPrompts.tsx  (+7 more)
src/hooks/: index.ts  useAppUpdater.ts  useAttachments.ts  useCommands.ts  useFileReader.ts  useFileSearch.ts  useLspStatus.ts  useMcpResources.ts  useMentions.ts  useModelsRegistry.ts  useOpencode.ts  useProviders.ts  useServiceStatus.ts  useSubagentSession.ts  useTriggerDetection.ts
src/i18n/: index.ts
src/lib/: utils.ts
src/providers/: ChatProvider.tsx  OpencodeProvider.tsx  ProjectProvider.tsx  index.ts
src/routes/: __root.tsx  index.tsx  orchestration.tsx  settings.tsx
src/services/: agent.ts  index.ts  migration.ts  opencode-api.ts  orchestration.ts  tauri.ts
src/stores/: activityBar.ts  chat.ts  editor.ts  index.ts  layout.ts  orchestration-v2.ts  orchestration.ts  permission.ts  project.ts  provider.ts  question.ts  service.ts  subagentMessages.ts  subagentPanel.ts  terminal.ts  theme.ts  todo.ts  usagePanel.ts  workflow.ts  workspace.ts
src/types/: agent.ts  chat.ts  mcp.ts  modelsRegistry.ts  orchestration.ts  permission.ts  project.ts  provider.ts  terminal.ts  workflow.ts
src/utils/: fileType.ts  workflowExport.ts
(+113 files in other folders)
