[package]
name = "axon_desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "axon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
futures-util = "0.3.31"

thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
parking_lot = "0.12.5"
zip = "7.0.0"
tauri-plugin-dialog = "2.4.2"
similar = { version = "2.7.0", features = ["unicode"] }
semver = "1.0.27"
base64 = "0.22.1"

# Dev 构建优化 - 加快编译速度
[profile.dev]
# 启用增量编译
incremental = true
# 减少优化级别以加快编译
opt-level = 0

# 对依赖使用优化（运行更快，首次编译稍慢但会被缓存）
[profile.dev.package."*"]
opt-level = 2

# Release 构建优化 - 减小体积并提升启动速度
[profile.release]
# 启用链接时优化
lto = true
# 单代码生成单元，优化更彻底
codegen-units = 1
# 优化大小同时保持性能
opt-level = "s"
# 移除 panic 展开信息
panic = "abort"
# 剥离调试符号
strip = true

# Release 增量编译（可选，release 默认关闭）
# 如果需要频繁 release 构建可以启用
# [profile.release]
# incremental = true

